openshift/service-ui.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-ui
spec:
  selector:
    app: react-ui
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
