openshift/route-api.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: python-api
spec:
  to:
    kind: Service
    name: python-api
  port:
    targetPort: 80
