openshift/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: github-listener-route
spec:
  to:
    kind: Service
    name: el-github-listener
